apps/goatlint/src/snapshots/_-c fixtures__cli__linter__eslintrc.json fixtures__cli__linter__debugger.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c fixtures/cli/linter/eslintrc.json fixtures/cli/linter/debugger.js
working directory: 
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/linter/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 126 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
